Format research titles: ' - ' -> ': '
- E.g., "Faulkner - Blah blah" -> "Faulkner: Blah blah"

--- a/_layouts/research.html
+++ b/_layouts/research.html
@@ -10,7 +10,7 @@ layout: no-header
 	</div>
 	
 	<div class="project-content__title">
-		<span>{{ page.title }}</span>
+		<span>{{ page.title | replace: ' - ', ': ' }}</span>
 	</div>
 	
 	<div class="project-content__metadata">
