--- a/assets/css/_sass/_research-project.scss
+++ b/assets/css/_sass/_research-project.scss
@@ -19,17 +19,30 @@
 	margin-top: -60px; // no header
 	&::after {
 		content: '';
-		position: absolute;
-		top: 0;
+		position: fixed;
+		top: calc(100vh - 48px);
 		right: 0;
 		display: block;
-		height: 100%;
-		width: 48px;
-		background-color: black;
+		height: 48px;
+		width: 100%;
+//		background-color: black;
+		z-index: 1;
 	}
 	@media screen and (min-width: 600px) {
 		padding: 0 8.33%;
 		padding-top: 5rem;
+	@media screen and (min-width: 768px) {
+		&::after {
+			content: '';
+			position: absolute;
+			top: 0;
+			right: 0;
+			display: block;
+			height: 100%;
+			width: 48px;
+//			background-color: black;
+		}
+	}
 	@media screen and (min-width: 1024px) {
 		grid-template-columns: 1fr 1fr;
 		grid-template-areas: "title pic"
