Adjust spacing at top of page to match other pages

--- a/assets/css/_sass/_research-project.scss
+++ b/assets/css/_sass/_research-project.scss
@@ -30,7 +30,8 @@
 	}
 	@media screen and (min-width: 600px) {
 		padding: 0 8.33%;
-		padding-top: 5rem;
+		padding-top: 3rem;
+	}
 	@media screen and (min-width: 768px) {
 		&::after {
 			content: '';
