--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -35,7 +35,9 @@ layout: default
 			    <img src="{{ site.baseurl }}/assets/img/people/scholarslab.png" alt="Scholars' Lab Lab">
 			{% else %}
 			    {% for pic in profile_pic %}
+			    {% unless pic.path contains 'cropped' %}
 			      <img src="{{ pic.path }}" alt="{{ page.slug }}">
+			    {% endunless %}
 			    {% endfor %}
 			{% endif %}
 		</div>
