Add link to project page

--- a/_layouts/research.html
+++ b/_layouts/research.html
@@ -22,6 +22,7 @@ layout: no-header
 			</ul>
 		{% endfor %}
 		</div>
+		<div class="project-content__cta"><a href="{{ page.link }}">Visit Project</a></div>
 	</div>
 	<div class="project-content__text">{{ content }}</div>
 </article>
