--- a/assets/css/_sass/_research-project.scss
+++ b/assets/css/_sass/_research-project.scss
@@ -45,9 +45,9 @@
 		}
 	}
 	@media screen and (min-width: 1024px) {
-		grid-template-columns: 1fr 1fr;
-		grid-template-areas: "title pic"
-							 "meta text";
+		grid-template-columns: 1fr 1fr minmax(100px, 1fr) 2fr;
+		grid-template-areas: "title title title meta"
+							 "text text pic pic";
 	}
 }
 
