--- a/assets/css/_sass/_research-project.scss
+++ b/assets/css/_sass/_research-project.scss
@@ -46,8 +46,10 @@
 	}
 	@media screen and (min-width: 1024px) {
 		grid-template-columns: 1fr 1fr minmax(100px, 1fr) 2fr;
-		grid-template-areas: "title title title meta"
-							 "text text pic pic";
+		grid-template-areas: "title title title pic"
+							 "text text text meta"
+							 "text text text meta"
+							 ". . . meta";
 	}
 }
 
@@ -59,6 +61,7 @@
 	justify-self: start;
 	align-self: start;
 	display: inline-block;
+	margin-bottom: .5em;
 	font-size: 3rem;
 	font-weight: 900;
 	line-height: 1;
@@ -66,7 +69,6 @@
 	span {
 		color: rgba(20,20,20,1);
 	}
-	
 	@media screen and (min-width: 600px) {
 		font-size: 4rem;
 	}
@@ -118,8 +120,12 @@
 	position: relative;
 	display: flex;
 	flex-flow: column nowrap;
-	margin-bottom: 1.5rem;
-
+	margin: 1.5rem 0;
+	@media screen and (min-width: 768px) {
+		margin: 0;
+		margin-top: 2.4em; // vertical rhythem w/ text
+		margin-left: 8.33%;
+	}
 }
 
 .project-content__year, .project-content__category, .project-content__collaborators {
@@ -127,19 +133,17 @@
 	display: grid;
 	grid-template-columns: 50% 50%;
 	margin: 0;
-	margin-bottom: 1em;
+	margin-bottom: 1.2em; // vertical rhythm w/ text: 24px
 	padding: 0;
 	font-size: 1.25rem;
 	font-family: "base-mono-narrow", monospace;
 	font-weight: 200;
-	line-height: 1.5rem;
+	line-height: 1.2; //.5rem;
 	span {
 		display: inline-block;
 		padding-right: 1rem;
-	//	font-size: 1.5rem;
 		font-family: "base-mono-wide", monospace;
 		font-weight: 400;
-	//	line-height: 1;
 		text-transform: uppercase;
 		white-space: nowrap;
 	}
@@ -156,16 +160,7 @@
 /* Collaborators */
 
 .project-content__collaborators {
-	position: relative;
-//	font-size: 1.5rem;
-//	font-family: "base-mono-narrow", monospace;
-	font-weight: 200;
-//	line-height: 1;
-	span {
-		display: inline-block;
-	//	font-family: "base-mono-wide", monospace;
-		text-transform: uppercase;
-	}
+
 }
 
 .project-collab__people {
@@ -176,7 +171,8 @@
 		align-self: flex-start;
 		display: flex;
 		flex-flow: column nowrap;
-		margin: .5em 0;
+		margin: 0;
+		margin-bottom: 1.5rem;
 		padding: 0;
 		list-style-type: none;
 		&:first-of-type {
@@ -195,14 +191,15 @@
 			}
 		} // end li
 	} // end ul
-} // end people wrapper
+} // end people wrapper style="background-color: {{ colors[0].color-bg }} "
 
 /* Text */
 
 .project-content__text {
 	grid-area: text;
 	position: relative;
-	background-color: rgba(255,255,255,.9);
+//	background-color: rgba(255,255,255,.9);
+	margin: 1.5rem 0;
 	p {
 		margin: 0;
 		padding: 0;
@@ -221,8 +218,11 @@
 		}
 	}
 	@media screen and (min-width: 768px) {
+		margin: 0;
+		margin-top: 2em;
+		margin-right: 1em;
 		p {
-			font-size: 18px;
+			font-size: 18px; // 1/4 title text
 		}
 	}
 }
