--- a/assets/css/_sass/_research-project.scss
+++ b/assets/css/_sass/_research-project.scss
@@ -45,11 +45,9 @@
 		}
 	}
 	@media screen and (min-width: 1024px) {
-		grid-template-columns: 1fr 1fr minmax(100px, 1fr) 2fr;
-		grid-template-areas: "title title title pic"
-							 "text text text meta"
-							 "text text text meta"
-							 ". . . meta";
+		grid-template-columns: 1fr 1fr;
+		grid-template-areas: "title pic"
+							 "meta text";
 	}
 }
 
@@ -79,7 +77,7 @@
 
 	}
 	@media screen and (min-width: 1024px) {
-
+		margin-right: .5em;
 	}
 }
 
@@ -101,7 +99,7 @@
 
 	}
 	@media screen and (min-width: 768px) {
-		margin-left: 8.33%;
+	//	margin-left: 8.33%;
 	}
 	@media screen and (min-width: 900px) {
 
@@ -116,29 +114,30 @@
 .project-content__metadata {
 	grid-area: meta;
 	align-self: start;
-//	justify-self: end;
 	position: relative;
-	display: flex;
-	flex-flow: column nowrap;
+	display: grid;
+	grid-template-columns: 1fr minmax(1fr, auto);
+	grid-template-areas: "year ppl"
+						 "cat ppl"
+						 "... ppl";
+
 	margin: 1.5rem 0;
-	@media screen and (min-width: 768px) {
+	@media screen and (min-width: 1024px) {
 		margin: 0;
-		margin-top: 2.4em; // vertical rhythem w/ text
-		margin-left: 8.33%;
 	}
 }
 
 .project-content__year, .project-content__category, .project-content__collaborators {
 	position: relative;
-	display: grid;
-	grid-template-columns: 50% 50%;
+	display: flex;
+	flex-flow: column nowrap;
 	margin: 0;
-	margin-bottom: 1em; // 1.2em; // vertical rhythm w/ text: 24px
+	margin-bottom: 1em;
 	padding: 0;
-	font-size: 1rem; // 1.25rem;
+	font-size: 1rem;
 	font-family: "base-mono-narrow", monospace;
 	font-weight: 200;
-	line-height: 1; //1.2; //.5rem;
+	line-height: 1;
 	span {
 		display: inline-block;
 		padding-right: 1rem;
@@ -150,17 +149,24 @@
 }
 
 .project-content__year {
-	
+	grid-area: year;
 }
 
 .project-content__category {
-
+	grid-area: cat;
 }
 
 /* Collaborators */
 
 .project-content__collaborators {
-
+	grid-area: ppl;
+	margin-left: 1em;
+	span {
+		margin-bottom: 2em;
+	}
+	@media screen and (min-width: 1024px) {
+		margin-right: 8.33%;
+	}
 }
 
 .project-collab__people {
@@ -201,9 +207,7 @@
 //	background-color: rgba(255,255,255,.9);
 	margin: 1em 0; // 1.5rem 0;
 	p {
-	//	margin: 0;
 		padding: 0;
-	//	line-height: 2;
 		a {
 			text-decoration: none;
 			color: black;
