Wrap img in div so pseudoelem = exact size of image

--- a/_layouts/research.html
+++ b/_layouts/research.html
@@ -6,7 +6,7 @@ layout: no-header
 
 <article class="project-content-wrapper">
 	<div class="project-content__img">
-		<img src="{{ '/assets/img/research/' | append: page.banner-img | relative_url }}" alt="{{ page.title }}">
+		<div><img src="{{ '/assets/img/research/' | append: page.banner-img | relative_url }}" alt="{{ page.title }}"></div>
 	</div>
 	<div class="project-content__title">
 		<span>{{ page.title | replace: ' - ', ': ' }}</span>
