Add Liquid to test # words in title; if short, stack metadata
- If long, put the metadata next to one another (default)

- If short, stacking them makes it look less awkward next to the image,
  since it evens out the content height a bit

--- a/_layouts/research.html
+++ b/_layouts/research.html
@@ -3,6 +3,7 @@ layout: no-header
 ---
 
 {% assign colors = site.data.research[page.slug] %}
+{% assign title_array = page.title | split: ' ' %}
 
 <article class="project-content-wrapper">
 	<div class="project-content__img">
@@ -11,8 +12,7 @@ layout: no-header
 	<div class="project-content__title">
 		<span>{{ page.title | replace: ' - ', ': ' }}</span>
 	</div>
-	<div class="project-content__metadata">
-		
+	<div class="project-content__metadata" {% if title_array.size <= 2 %}style="flex-flow: column nowrap;"{% endif %}>
 		<div class="project-content__year"><span>Year:</span><div>{{ page.year }}</div></div>
 		<div class="project-content__category"><span>Project Type:</span><div>{{ page.research-category | replace: 'and', '&amp;' }}</div></div>
 		<!--div class="project-content__cta"><a href="{{ page.link }}">Visit Project</a></div-->
