Final draft of research detail content grid for full-size screens
- Incorporates new grid area for collaborators

- Resizes columns/rows to accommodate the large size range
  in each section of content

--- a/assets/css/_sass/_research-project.scss
+++ b/assets/css/_sass/_research-project.scss
@@ -45,9 +45,11 @@
 		}
 	}
 	@media screen and (min-width: 1024px) {
-		grid-template-columns: 1fr 1fr;
+		grid-template-columns: 6fr 4fr;
+		grid-template-rows: minmax(2rem, auto) minmax(2rem, auto) 1fr; // b/c min 100vh requirement
 		grid-template-areas: "title pic"
-							 "meta text";
+							 "meta pic"
+							 "text ppl";
 		max-width: calc(1200px + 16.67%);
 		margin: 0 auto;
 	}
