Restyle metadata structure now that collaborators are in diff section
- Also adjust font size/spacing so it's a multiple of the title size

--- a/assets/css/_sass/_research-project.scss
+++ b/assets/css/_sass/_research-project.scss
@@ -130,16 +130,18 @@
 .project-content__metadata {
 	grid-area: meta;
 	align-self: start;
+	justify-content: start;
 	position: relative;
-	display: grid;
-	grid-template-columns: 1fr minmax(1fr, auto);
-	grid-template-areas: "year ppl"
-						 "cat ppl"
-						 "... ppl";
-
-	margin: 1.5rem 0;
+	display: flex;
+	flex-flow: row nowrap;
+	justify-content: start;
+	width: 100%;
 	@media screen and (min-width: 1024px) {
+	//	margin: 1.25em 0;
 		margin: 0;
+		padding-right: 2rem;
+		font-size: 1.25rem;
+		line-height: 1.2;
 	}
 }
 
