--- a/assets/css/_sass/_research-project.scss
+++ b/assets/css/_sass/_research-project.scss
@@ -145,6 +145,7 @@
 	}
 }
 
+/* NB: collaborators is 1 level above year & category, nesting-wise */
 .project-content__year, .project-content__category, .project-content__collaborators {
 	position: relative;
 	display: flex;
@@ -152,13 +153,11 @@
 	margin: 0;
 	margin-bottom: 1em;
 	padding: 0;
-	font-size: 1rem;
 	font-family: "base-mono-narrow", monospace;
 	font-weight: 200;
-	line-height: 1;
 	span {
 		display: inline-block;
-		padding-right: 1rem;
+		padding-right: 1em;
 		font-family: "base-mono-wide", monospace;
 		font-weight: 400;
 		text-transform: uppercase;
@@ -168,6 +167,9 @@
 
 .project-content__year {
 	grid-area: year;
+	@media screen and (min-width: 1024px) {
+		padding-right: 2rem; // .5 title em
+	}
 }
 
 .project-content__category {
