Add basic styles to collaborators section
- Same font/line height as metadata section

- Also, same line height as paragraph text
  -   para =    1rem * 1.5 = 1.5rem
  - collab = 1.25rem * 1.2 = 1.5rem

--- a/assets/css/_sass/_research-project.scss
+++ b/assets/css/_sass/_research-project.scss
@@ -180,12 +180,16 @@
 
 .project-content__collaborators {
 	grid-area: ppl;
-	margin-left: 1em;
+	justify-self: start;
+	align-self: start;
+	line-height: 1;
 	span {
-		margin-bottom: 2em;
+		margin-bottom: 1em;
+		font-size: 1.25rem;
 	}
 	@media screen and (min-width: 1024px) {
-		margin-right: 8.33%;
+		margin-top: 1rem;
+		font-size: 1.25rem;
 	}
 }
 
