Remove top padding; removed nav but forgot applied to <main> regardless
- 60px top padding is on every page, because nav is absolutely positioned
  so otherwise it wouldn't take up space and layouts would be off by 60px

- Forgot about that and had been adjusting for it manually in here; that
  doubled the top padding until now -> oops

--- a/assets/css/_sass/_research-project.scss
+++ b/assets/css/_sass/_research-project.scss
@@ -30,7 +30,7 @@
 	}
 	@media screen and (min-width: 600px) {
 		padding: 0 8.33%;
-		padding-top: 3rem;
+	//	padding-top: 3rem;
 	}
 	@media screen and (min-width: 768px) {
 		&::after {
