--- a/assets/css/_sass/_research-project.scss
+++ b/assets/css/_sass/_research-project.scss
@@ -11,12 +11,12 @@
 	grid-template-areas: "pic"
 						 "title"
 						 "meta"
-						 "text";
+						 "text"
+						 "ppl";
 	align-items: start;
 	width: 100%;
 	min-height: calc(100vh - 60px);
 	padding: 0 4.167%;
-	padding-top: 3rem;
 	margin-top: -60px; // no header
 	&::after {
 		content: '';
@@ -30,10 +30,11 @@
 		z-index: 1;
 	}
 	@media screen and (min-width: 600px) {
+		margin-top: -32px; // 20px shows -> .5 title em
 		padding: 0 8.33%;
-	//	padding-top: 3rem;
 	}
 	@media screen and (min-width: 768px) {
+		margin-top: 0;
 		&::after {
 			content: '';
 			position: absolute;
@@ -64,25 +65,28 @@
 	justify-self: start;
 	align-self: start;
 	display: inline-block;
+	margin-top: .5em;
 	margin-bottom: .5em;
-	font-size: 3rem;
+	font-size: 2.5rem;
 	font-weight: 900;
 	line-height: 1;
+	text-align: center;
 	z-index: 1;
 	span {
 		color: rgba(20,20,20,1);
 	}
 	@media screen and (min-width: 600px) {
-		font-size: 4rem;
+		font-size: 3rem;
 	}
 	@media screen and (min-width: 768px) {
+		justify-self: center;
 		font-size: 4rem;
 	}
-	@media screen and (min-width: 900px) {
-
-	}
 	@media screen and (min-width: 1024px) {
+		justify-self: start;
+		margin-top: 0;
 		margin-right: .5em;
+		text-align: left;
 	}
 }
 
@@ -92,9 +96,15 @@
 	position: relative;
 	grid-area: pic;
 	align-self: start;
+	position: relative;
+	width: 109.1%; // 100% / 91.67% = 100vw
+	justify-self: center;
+	img {
+		max-width: 100%;
+	}
 	display: flex;
-	justify-content: flex-start;
 	align-items: flex-start;
+	justify-content: center;
 	div {
 		position: relative;
 		display: inline-block;
@@ -104,6 +114,7 @@
 		}
 	}
 	@media screen and (min-width: 600px) {
+		width: 100%;
 		img {
 			display: inline-block;
 			max-width: 100%;
@@ -116,6 +127,7 @@
 
 	}
 	@media screen and (min-width: 1024px) {
+		justify-content: flex-start;
 		div {
 			img {
 			//	border: 1px solid rgba(0,0,0,.7);
@@ -130,18 +142,29 @@
 .project-content__metadata {
 	grid-area: meta;
 	align-self: start;
-	justify-content: start;
 	position: relative;
 	display: flex;
 	flex-flow: row nowrap;
-	justify-content: start;
-	width: 100%;
-	@media screen and (min-width: 1024px) {
-	//	margin: 1.25em 0;
-		margin: 0;
-		padding-right: 2rem;
+	padding: .5em 1em;
+	@media screen and (min-width: 400px) {	
+		padding: .5em 20px;
+	}	
+	@media screen and (min-width: 768px) {
+		justify-content: center;
+		margin: 0 auto;
+		padding: .5rem 2rem;
 		font-size: 1.25rem;
 		line-height: 1.2;
+	}
+	@media screen and (max-width: 1023px) {	
+		border: 1px solid black;
+	}
+	@media screen and (min-width: 1024px) {
+		justify-content: start;
+		width: 100%;
+		margin: 0;
+		padding: 0;
+		padding-right: 2rem;
 	}
 }
 
@@ -157,23 +180,35 @@
 	font-weight: 200;
 	span {
 		display: inline-block;
-		padding-right: 1em;
 		font-family: "base-mono-wide", monospace;
 		font-weight: 400;
 		text-transform: uppercase;
 		white-space: nowrap;
 	}
+
 }
 
 .project-content__year {
 	grid-area: year;
-	@media screen and (min-width: 1024px) {
+	margin-bottom: 0;
+	padding-right: 1rem;
+	@media screen and (min-width: 400px) {
+		padding-right: 30px; // .75 title em
+	}
+	@media screen and (min-width: 768px) {
 		padding-right: 2rem; // .5 title em
+	}
+	@media screen and (min-width: 1024px) {
+		margin-bottom: 1em;
 	}
 }
 
 .project-content__category {
 	grid-area: cat;
+	margin-bottom: 0;
+	@media screen and (min-width: 1024px) {
+		margin-bottom: 1em;
+	}
 }
 
 /* Collaborators */
@@ -187,8 +222,14 @@
 		margin-bottom: 1em;
 		font-size: 1.25rem;
 	}
+	@media screen and (max-width: 1023px) {
+		span {
+			padding-top: 1em;
+			border-top: 1px solid rgba(0,0,0,1);
+		}
+	}
 	@media screen and (min-width: 1024px) {
-		margin-top: 1rem;
+		margin-top: 2rem;
 		font-size: 1.25rem;
 	}
 }
@@ -221,16 +262,28 @@
 			}
 		} // end li
 	} // end ul
-} // end people wrapper style="background-color: {{ colors[0].color-bg }} "
+	@media screen and (min-width: 768px) and (max-width: 1023px) {
+
+	}
+	@media screen and (min-width: 1024px) {
+
+	}
+}
 
 /* Text */
 
 .project-content__text {
 	grid-area: text;
 	position: relative;
-	margin: 1em 0; // 1.5rem 0;
+	margin: 0; // 1.5rem 0;
 	p {
 		padding: 0;
+		&:first-of-type {
+			margin-top: 20px; // .5 title em
+		}
+		&:last-of-type {
+			margin-bottom: 20px;
+		}
 		a {
 			text-decoration: none;
 			color: black;
@@ -244,14 +297,18 @@
 			}
 		}
 	}
-	@media screen and (min-width: 768px) {
-	//	margin-right: 1em;
+	@media screen and (min-width: 600px) {
 		p {
-		//	font-size: 18px; // 1/4 title text
+			&:first-of-type {
+				margin-top: 24px; // .5 title em
+			}
+			&:last-of-type {
+				margin-bottom: 24px;
+			}
 		}
 	}
 	@media screen and (min-width: 1024px) {
-		margin-top: 1rem;
+		margin-top: 2rem;
 		margin-right: 4rem;
 		// test:
 		padding: 1.25em 1.5em;
@@ -259,10 +316,8 @@
 		border: 1px solid black;
 		box-shadow: 4px 4px 0 0 rgba(0,0,0,.5);
 		p {
-		//	font-size: 1.125rem;
-		//	line-height: 1.78; // 1/4 title text
 			&:first-of-type {
-				margin-top: 0;
+				margin-top: .25rem;
 			}
 			&:last-of-type {
 				margin-bottom: 0;
