Add explanatory comments to research gallery SCSS

--- a/assets/css/_sass/_research.scss
+++ b/assets/css/_sass/_research.scss
@@ -319,21 +319,31 @@
 	}
 }
 
+/* Number: */
+
 .research-item__num {
 
 }
+
+/* Title: */
 
 .research-item__name {
 
 }
 
+/* Image: */
+
 .research-item__pic {
 
 }
 
+/* Year: */
+
 .research-item__yr {
 
 }
+
+/* ###### old version starts here ########### */
 
 /* Main Content: */
 
