--- a/assets/css/_sass/_research.scss
+++ b/assets/css/_sass/_research.scss
@@ -212,7 +212,7 @@
 	position: relative;
 	width: 100%;
 	@media screen and (min-width: 768px) {
-		min-height: 100vh;
+		height: 100vh;
 	}
 }
 
@@ -221,7 +221,7 @@
 }
 
 .research-folio__background--color {
-
+	position: relative;
 }
 
 .research-folio__context {
