--- a/assets/css/_sass/_research.scss
+++ b/assets/css/_sass/_research.scss
@@ -291,15 +291,17 @@
 	width: 83.33%; // 100%;
 	margin: 0 auto;
 	overflow: hidden;
-	border: 1px solid orange;
+//	border: 1px solid orange;
 }
 
 .research-folio__gallery {
-	position: relative;
-	display: flex;
-	flex-flow: row nowrap;
+//	display: flex;
+//	flex-flow: row nowrap;
+	display: grid;
+	grid-template-columns: repeat(22, minmax(300px, 25vw));
+	justify-content: start;
 	height: 100vh;
-	min-width: calc(300px * 22);
+//	min-width: calc(300px * 22);
 	background-color: pink;
 }
 
@@ -311,7 +313,7 @@
 	justify-content: center;
 	align-items: center;
 	height: 100vh;
-	width: 20.83vw; // 360px;
+//	width: 266.66px; // calc(25vw * 0.8333);
 	border-right: 1px solid black;
 	// wraps all content:
 	a {
