--- a/assets/css/_sass/_research.scss
+++ b/assets/css/_sass/_research.scss
@@ -185,28 +185,57 @@
 }
 
 // NB: text is in <p> -> margin: 1em 0;
-.research-landing__description {
-	grid-area: subtitle;
-	align-self: start;
-	position: relative;
-//	margin-top: 1.5em;
-//	padding-bottom: 1em;
+.research__description {
+	padding: 1em 0;
 	font-size: 1rem;
-	font-family: "base-mono-narrow", monospace;
-	line-height: 1.2;
-	color: rgba(0,0,0,.5);
+	font-weight: 200;
+	background-image: linear-gradient(to bottom, black, rgba(0,0,0,.85));
 	@media screen and (min-width: 600px) {
 		font-size: 1.5rem;
 	}
 	@media screen and (min-width: 768px) {
 		font-size: 1.75rem;
+		line-height: 1.714; // 3rem
 	}
 	@media screen and (min-width: 1024px) {
-		font-size: 2rem;
+	//	padding: 0 8.33%;
+	//	font-size: 2rem;
 	}
 }
 
-/* Portfolio: */
+.research-description__title {
+	color: rgba(255,255,255,.9) !important;
+}
+
+.research-description__text {
+	position: relative;
+	padding: 0 2em;
+	margin: 0 4.167%;
+	font-family: "base-mono-narrow", monospace;
+	color: rgba(255,255,255,.9);
+	border: 2px solid rgba(255,255,255,.9);
+	&::before {
+		content: '';
+		position: absolute;
+		right: 33%;
+		top: 0;
+		display: block;
+		height: 3em;
+		width: 1.5em;
+		border-right: 2px solid white;
+		border-left: 2px solid white;
+		transform: translate(50%, -50%) skew(-45deg, 0);
+	}
+	p {
+		margin: 0;
+		padding-bottom: 1em;
+		&:first-of-type {
+			padding-top: 2em;
+		}
+	}
+}
+
+// end description
 
 .research-portfolio-wrapper {
 	position: relative;
