--- a/assets/css/_sass/_research.scss
+++ b/assets/css/_sass/_research.scss
@@ -363,15 +363,17 @@
 	}
 }
 
+/* Item track: */
+
+// #! item width set here
 .research-folio__gallery {
-//	display: flex;
-//	flex-flow: row nowrap;
 	display: grid;
-	grid-template-columns: repeat(22, minmax(280px, 25vw));
+	grid-template-columns: repeat(22, minmax(240px, 25vw));
 	justify-content: start;
-	height: 100vh;
-//	min-width: calc(300px * 22);
-	background-color: pink;
+	height: 100%;
+	background-color: white;
+	-webkit-transition: transform .5s;
+	transition: transform .5s;
 }
 
 // <section>
