Hide old version of gallery 'til deleted

--- a/assets/css/_sass/_research.scss
+++ b/assets/css/_sass/_research.scss
@@ -486,6 +486,7 @@
 
 .research-main-content {
 	position: relative;
+	display: none; // hiding old version
 //	padding: 1em 4.167%;
 	background-color: rgba(0,0,0,.9);
 	color: white;
