Add research gallery to pages affected by title styling

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -124,7 +124,9 @@ main {
 /****************** 1. Default Styles: *******************/
 
 // section titles
-[class*="__title"][class*="home-"], [class*="__title"][class*="spatial-"] {
+[class*="__title"][class*="home-"],
+[class*="__title"][class*="spatial-"],
+[class*="__title"][class*="research-"] {
 	margin-bottom: .5em;
 	margin-top: 1em;
 	font-family: "Raleway", sans-serif;
