Add media query to gallery item padding + adjust hover translation
- Bottom padding to make room for progress tracker bar was starting to
  affect the rest of the content, which is supposed to be vertically
  centered

- Made it only apply if height is at or below where the arrows would start
  overlapping with the item content

- Change translation of item #s: was .25em, now .5em
  - Why? Vertically pulls it as much as the images look like they're
    getting "pulled" (zoomed). Tried just reducing image zoom but didn't
    look as good.

--- a/assets/css/_sass/_research.scss
+++ b/assets/css/_sass/_research.scss
@@ -394,7 +394,6 @@
 	justify-content: center;
 	align-items: center;
 	height: 100%;
-	padding-bottom: 3rem; // progress bar
 	border-left: 1px solid rgba(0,0,0,.3);;
 	// wraps all content:
 	a {
@@ -409,8 +408,8 @@
 		transition: transform .3s;
 		&:hover, &:focus {
 			.research-item__num {
-				-webkit-transform: translate(0, .25em);
-				transform: translate(0, .25em);
+				-webkit-transform: translate(0, .5em);
+				transform: translate(0, .5em);
 			}
 			.research-item__pic {
 				div {
@@ -425,6 +424,9 @@
 		div {
 			line-height: 1;
 		}
+	}
+	@media screen and (max-height: 560px) {
+		padding-bottom: 3rem; // progress bar
 	}
 }
 
