Remove commented-out styles; hide context menu while in prototype stage

--- a/assets/css/_sass/_research.scss
+++ b/assets/css/_sass/_research.scss
@@ -197,10 +197,6 @@
 		font-size: 1.75rem;
 		line-height: 1.714; // 3rem
 	}
-	@media screen and (min-width: 1024px) {
-	//	padding: 0 8.33%;
-	//	font-size: 2rem;
-	}
 }
 
 .research-description__title {
@@ -251,17 +247,28 @@
 	@media screen and (min-width: 1024px) {
 		padding: 3rem; // 4.167%;
 	}
-
 }
 
 .research-folio__background--color {
 	position: relative;
 }
 
+/* Menu Links */
+
 .research-folio__context {
 	position: absolute;
+	right: 0;
+	top: 0;
+	display: none; /* #! hide during prototype */
+	color: white;
 	border: 1px solid blue;
-
+	transform: translate(100%, 100%) rotate(90deg);
+	transform-origin: bottom left;
+	z-index: 1;
+	a {
+		text-decoration: none;
+		color: white;
+	}
 }
 
 /* Floating Navigation: */
