--- a/assets/css/_sass/_research.scss
+++ b/assets/css/_sass/_research.scss
@@ -275,22 +275,26 @@
 
 .research-folio__nav {
 	position: absolute;
-	bottom: 0;
+	bottom: 50%;
 	left: 0;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
 	height: 3.5rem;
 	width: 100%;
-	padding: 0 24px; // magic # w/ buttons
-	color: black;
+	padding: 0; // calc(calc(100% - 300px) / 4); // magic # w/ buttons
 	z-index: 10;
+	@media screen and (min-width: 500px) {
+		bottom: 0;
+		padding: 0 24px; // magic # w/ buttons
+		color: black;
+	}
 }
 
 /* Buttons: */
 
 [class*="research-nav__btn--"] {
-	padding: 0 .5em;
+	padding: 0 .375em;
 	font-size: 2rem;
 	font-family: "base-mono-wide", sans-serif;
 	font-weight: 900;
@@ -300,6 +304,13 @@
 	transition: transform .2s;
 	&:hover {
 		transform: translate(0, 2px);
+	}
+	@media screen and (max-width: 499px) {
+		color: white;
+		text-shadow: 0 0 2px rgba(0,0,0,.5);
+	}
+	@media screen and (min-width: 500px) {
+		padding: 0 .5em;
 	}
 }
 
@@ -328,6 +339,11 @@
 		&:last-of-type {
 			padding-left: 2rem;
 		}
+	}
+	@media screen and (max-width: 499px) {
+		display: flex;
+		width: 272px;
+		transform: translate(0, 50vh);
 	}
 	@media screen and (min-width: 768px) {
 		display: flex;
@@ -359,8 +375,8 @@
 
 .research-folio__gallery-wrapper {
 	position: relative;
-	height: calc(100vh - 2rem);
-	width: 100%;
+	height: 100vh;
+	width: 300px;
 	margin: 0 auto;
 	border-right: 1px solid black;
 	overflow: hidden;
@@ -374,6 +390,10 @@
 		width: 35px;
 		background-image: linear-gradient(to left, rgba(0,0,0,.4) 0%, rgba(0,0,0,.19) 5px, rgba(0,0,0,0) 80%);
 	}
+	@media screen and (min-width: 500px) {
+		height: calc(100vh - 2rem);
+		width: 100%;
+	}
 	@media screen and (min-width: 1024px) {
 		height: calc(100vh - 3rem);
 	}
@@ -384,12 +404,15 @@
 // #! item width set here
 .research-folio__gallery {
 	display: grid;
-	grid-template-columns: repeat(22, minmax(240px, 25vw));
+	grid-template-columns: repeat(22, 300px);
 	justify-content: start;
 	height: 100%;
 	background-color: white;
 	-webkit-transition: transform .5s;
 	transition: transform .5s;
+	@media screen and (min-width: 500px) {
+		grid-template-columns: repeat(22, 240px);
+	}
 }
 
 /* Items: */
@@ -412,28 +435,31 @@
 		width: 83.33%;
 		text-decoration: none;
 		color: black;
-		transition: transform .3s;
-		&:hover, &:focus {
-			.research-item__num {
-				-webkit-transform: translate(0, .5em);
-				transform: translate(0, .5em);
-			}
-			.research-item__pic {
-				div {
-					img {
-						-webkit-transform: scale(1.1);
-						transform: scale(1.1);
-					}
-				}
-				
-			}
-		}
 		div {
 			line-height: 1;
 		}
 	}
-	@media screen and (max-height: 560px) {
+	@media screen and (min-width: 500px) and (max-height: 560px) {
 		padding-bottom: 3rem; // progress bar
+	}
+	@media screen and (min-width: 500px) {
+		a {
+			transition: transform .3s;
+			&:hover, &:focus {
+				.research-item__num {
+					-webkit-transform: translate(0, .5em);
+					transform: translate(0, .5em);
+				}
+				.research-item__pic {
+					div {
+						img {
+							-webkit-transform: scale(1.1);
+							transform: scale(1.1);
+						}
+					}
+				}
+			}
+		}
 	}
 }
 
@@ -445,7 +471,9 @@
 	font-size: 1.5rem;
 	font-weight: 700;
 	color: black;
-	transition: transform .3s;
+	@media screen and (min-width: 500px) {
+		transition: transform .3s;
+	}
 }
 
 /* Title: */
@@ -463,7 +491,7 @@
 .research-item__pic {
 	position: relative;
 	width: 100%;
-	height: 200px;
+	height: 250px;
 	box-shadow: 0 0 2px 1px rgba(0, 0, 0, .05);
 /*	&::before {
 		content: '';
@@ -485,6 +513,9 @@
 			max-width: 100%;
 			transition: transform .3s;
 		}
+	}
+	@media screen and (min-width: 500px) {
+		height: 200px;
 	}
 }
 
