--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -21,6 +21,8 @@
 @import "spatial-tech";
 @import "research-project";
 
+/* #! General Styles: */
+
 * {
 	box-sizing: border-box;
 }
@@ -34,4 +36,56 @@ body {
 
 main {
 	padding-top: 60px;
+}
+
+/* #! Universal Selectors: */
+
+// in-text links on pages specified below
+[class*="home-"], [class*="maker-"], [class*="post-"], [class*="person-"], [class*="spatial-"] {
+	a {
+		font-family: "base-mono-narrow", monospace;
+		text-decoration: none;
+		color: black;
+		border-bottom: 2px solid magenta;
+		background-color: transparent;
+		-webkit-transition: background-color .3s;
+		transition: background-color .3s;
+		&:hover, &:focus {
+			background-color: magenta;
+		}
+	}
+}
+
+// in-text links v2.0
+[class*="post-"], [class*="person-"] {
+	a {
+		font-family: "Raleway", sans-serif !important;
+		font-weight: bold;
+		border-bottom: 2px solid hsla(186,80%,70%,1) !important;
+		&:hover, &:focus {
+			background-color: hsla(186,80%,70%,1) !important;
+		}
+	}
+}
+
+// call-to-action buttons, all pages
+[class*="__cta"] {
+	position: relative;
+	margin-top: 1em;
+	a {
+		display: inline-block;
+		padding: .25rem .5em;
+		margin-top: 4px;
+		font-size: 1.5rem;
+		font-family: "base-mono-wide", monospace !important;
+		font-weight: 700;
+		line-height: 1;
+		text-decoration: none;
+		text-transform: uppercase;
+		color: hsla(186,80%,70%,1);
+		border: 2px solid hsla(186,80%,70%,1);
+		&:hover, &:focus {
+			background-color: transparent !important;
+		}
+	}
 }
